This code when checked out will fix all styling bugs as well.

--- a/src/main/resources/templates/displayoffers.xhtml
+++ b/src/main/resources/templates/displayoffers.xhtml
@@ -37,17 +37,17 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
-    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 63rem;">
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" >
         <div class="card-header d-flex" style="font-weight: bold">Offers</div>
-        <div class="table table-sm table-bordered table-striped " style="margin: 1px">
-            <table border="0">
+        <div class="table" style="margin: 1px">
+            <table border="0" class="table table-bordered table-striped">
                 <tr>
-                    <th class="col-1" scope="col">Streaming Service</th>
-                    <th class="col-1" scope="col">Event Type</th>
-                    <th class="col-1" scope="col">Name</th>
-                    <th class="col-1" scope="col">Year</th>
-                    <th class="col-1" scope="col">Duration</th>
-                    <th class="col-1" scope="col">Studio Short Name</th>
+                    <th  scope="col">Streaming Service</th>
+                    <th scope="col">Event Type</th>
+                    <th  scope="col">Name</th>
+                    <th  scope="col">Year</th>
+                    <th  scope="col">Duration</th>
+                    <th  scope="col">Studio Short Name</th>
                     <!--                    <th class="col-1" scope="col">Event Licensing Fee</th>-->
                     <!--                    <th class="col-1" scope="col">Event PPV Cost</th>-->
                 </tr>
