--- a/src/main/resources/templates/displaydemo.xhtml
+++ b/src/main/resources/templates/displaydemo.xhtml
@@ -152,7 +152,7 @@
     </div>
 
 
-    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 100rem;">
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex">
         <div class="card-header d-flex" style="font-weight: bold">Demographic Groups</div>
         <div class="table-responsive " style="margin: 1px">
             <table class="table table-sm table-bordered table-striped">
