--- a/src/main/resources/templates/displayevents.xhtml
+++ b/src/main/resources/templates/displayevents.xhtml
@@ -118,19 +118,19 @@
     </div>
 
 
-    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 65rem;">
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex">
         <div class="card-header d-flex" style="font-weight: bold">Display or Update Events</div>
-        <div class="table table-sm table-bordered table-striped " style="margin: 1px">
-            <table border="0">
+        <div class="table " style="margin: 0px">
+            <table border="0" class="table table-bordered table-striped">
                 <tr>
-                    <th class="col-1" scope="col">ID</th>
-                    <th class="col-1" scope="col">Event Type</th>
-                    <th class="col-1" scope="col">Name</th>
-                    <th class="col-1" scope="col">Year</th>
-                    <th class="col-1" scope="col">Duration</th>
-                    <th class="col-1" scope="col">Studio Short Name</th>
-                    <th class="col-1" scope="col">Event Licensing Fee</th>
-                    <th class="col-1" scope="col">Editable</th>
+                    <th scope="col">ID</th>
+                    <th  scope="col">Event Type</th>
+                    <th  scope="col">Name</th>
+                    <th  scope="col">Year</th>
+                    <th  scope="col">Duration</th>
+                    <th  scope="col">Studio Short Name</th>
+                    <th  scope="col">Event Licensing Fee</th>
+                    <th  scope="col">Editable</th>
                 </tr>
                 <tr th:if="${nodata != null}" class="max-col-span">
                     <td colspan="100%">
@@ -140,13 +140,13 @@
                     </td>
                 </tr>
                 <tr th:each="event :${events}">
-                    <td th:text="${event.id}"> Event Type </td>
-                    <td th:text="${event.eventType}"> Event Type </td>
-                    <td th:text="${event.name}"> Name </td>
-                    <td th:text="${event.year}"> Year </td>
-                    <td th:text="${event.duration}"> Duration </td>
-                    <td th:text="${event.studioShortName}"> Studio Short Name </td>
-                    <td th:text="${event.eventLicensingFee}"> Event Licensing Fee </td>
+                    <td  th:text="${event.id}"> Event Type </td>
+                    <td  th:text="${event.eventType}"> Event Type </td>
+                    <td  th:text="${event.name}"> Name </td>
+                    <td  th:text="${event.year}"> Year </td>
+                    <td  th:text="${event.duration}"> Duration </td>
+                    <td  th:text="${event.studioShortName}"> Studio Short Name </td>
+                    <td  th:text="${event.eventLicensingFee}"> Event Licensing Fee </td>
                     <td>
                         <a th:if="${event.editable}" href="#" id="editButton" class="editButtonClass" th:attr="data-id=${event.id},data-sName=${event.name},data-year=${event.year},data-studioShortName=${event.studioShortName},data-eventLicensingFee=${event.eventLicensingFee}"><i class="pen far fa-edit"></i></a>
                         <i th:if="!${event.editable}" class="pen fas fa-ban editButtonClass"></i>
